--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "bulletbox",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
+    "antd": "^3.15.0",
+    "babel-plugin-import": "^1.11.0",
+    "electron": "^4.0.8",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +25,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "customize-cra": "^0.2.12",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "^2.1.1"
+  }
 }
