--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "bulletbox",
+  "description": "Transform Code Quickly",
   "version": "0.1.0",
+  "author": "ACERY",
   "private": true,
-  "main": "main.js",
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
     "antd": "^3.15.0",
     "babel-plugin-import": "^1.11.0",
-    "electron": "^4.0.8",
+    "electron-is-dev": "^1.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "web-dev": "react-app-rewired start",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "preelectron-pack": "yarn build",
+    "electron-pack": "build -c.extraMetadata.main=build/electron.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dist": "electron-builder --mac --x64 --dir ./dist",
+    "clear": "rm -rf ./build && rm -rf ./dist"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,8 +35,34 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "customize-cra": "^0.2.12",
     "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^2.1.1"
+    "react-app-rewired": "^2.1.1",
+    "wait-on": "^3.2.0",
+    "electron": "^4.0.8",
+    "electron-builder": "^20.39.0"
+  },
+  "build": {
+    "appId": "cn.helloyzy.bulletbox",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories":{
+      "buildResources": "assets"
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "zip"
+      ]
+    }
   }
 }
