--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "dependencies": {
     "antd": "^3.15.0",
     "babel-plugin-import": "^1.11.0",
+    "babel-polyfill": "^6.26.0",
     "electron-is-dev": "^1.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "webpack": "webpack --hide-modules --config webpack/main.conf.js",
     "web-dev": "react-app-rewired start",
-    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "concurrently \"BROWSER=none yarn web-dev\" \"wait-on http://localhost:3000 && electron .\"",
     "preelectron-pack": "yarn build",
     "electron-pack": "build -c.extraMetadata.main=build/electron.js",
     "build": "react-app-rewired build",
@@ -35,13 +37,18 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
     "customize-cra": "^0.2.12",
+    "electron": "^4.0.8",
+    "electron-builder": "^20.39.0",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.1",
     "wait-on": "^3.2.0",
-    "electron": "^4.0.8",
-    "electron-builder": "^20.39.0"
+    "webpack-cli": "^3.2.3"
   },
   "build": {
     "appId": "cn.helloyzy.bulletbox",
@@ -49,7 +56,7 @@
       "build/**/*",
       "node_modules/**/*"
     ],
-    "directories":{
+    "directories": {
       "buildResources": "assets"
     },
     "mac": {
