--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "webpack": "webpack --hide-modules --config webpack/main.conf.js",
     "web-dev": "react-app-rewired start",
-    "electron-dev": "concurrently \"BROWSER=none yarn web-dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "preelectron-pack": "yarn build",
+    "electron-web-dev":  "concurrently --names \"electron-webpack,react,electron\" -c  \"green.bold,blue.bold,cyan.bold\" \"yarn main-build\" \"BROWSER=none yarn web-dev\" \"wait-on http://localhost:3000 && electron . \"",
+    "electron-main-dev": "yarn build && nodemon --watch src/main --watch src/shared --exec './node_modules/.bin/npm run main-build-run' ",
+    "main-build": "webpack --hide-modules --config webpack/main.conf.js",
+    "main-build-run": "yarn main-build && electron .",
+    "electron-dev": "concurrently --names \"electron-webpack,react,electron\" -c  \"green.bold,blue.bold,cyan.bold\" \"yarn main-build\" \"BROWSER=none yarn web-dev\" \"wait-on http://localhost:3000 && yarn main-dev \"",
     "electron-pack": "build -c.extraMetadata.main=build/electron.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -45,6 +47,7 @@
     "customize-cra": "^0.2.12",
     "electron": "^4.0.8",
     "electron-builder": "^20.39.0",
+    "nodemon": "^1.18.10",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.1",
     "wait-on": "^3.2.0",
