feat: 设计项目模板

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bulletbox",
-  "description": "Transform Code Quickly",
+  "description": "Transform Code Easily",
   "version": "0.1.0",
   "author": "ACERY",
   "private": true,
