--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "homepage": "./",
   "dependencies": {
     "antd": "^3.15.0",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "babel-polyfill": "^6.26.0",
     "chalk": "^2.4.2",
     "electron-is-dev": "^1.0.1",
+    "fs-extra": "^7.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
