--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^2.4.2",
     "electron-is-dev": "^1.0.1",
     "fs-extra": "^7.0.1",
+    "nedb": "^1.8.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
