--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "electron-is-dev": "^1.0.1",
     "fs-extra": "^7.0.1",
     "nedb": "^1.8.0",
+    "randomatic": "^3.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
