--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^2.4.2",
     "electron-is-dev": "^1.0.1",
     "fs-extra": "^7.0.1",
+    "moment": "^2.24.0",
     "nedb": "^1.8.0",
     "randomatic": "^3.1.1",
     "react": "^16.8.4",
