--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-import": "^1.11.0",
     "babel-polyfill": "^6.26.0",
     "chalk": "^2.4.2",
+    "debug": "^4.1.1",
     "electron-is-dev": "^1.0.1",
     "fs-extra": "^7.0.1",
     "moment": "^2.24.0",
